--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+<div id="header">
+    <div class="container">
+        <nav>
+            <img src="Res/name_logo.png" class="nameLogo">
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Projects</a>
+                    <a href="#">CV</a>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</div>
 
 </body>
 
