--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
         <nav>
             <img src="Res/name_logo.png" class="nameLogo">
             <ul>
-                <li>
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Projects</a>
-                    <a href="#">CV</a>
-                    <a href="#">Contact</a>
-                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">CV</a></li>
+                <li><a href="#">Contact</a></li>
+                
             </ul>
         </nav>
     </div>
