--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">CV</a></li>
                 <li><a href="#">Contact</a></li>
-                
             </ul>
         </nav>
+        <div class="header_text">
+            <p>SOFTWARE ENGINEER</p>
+            <h1> Hi, I'm Oros <span>Cosmin</span> Cristian</h1>
+        </div>
     </div>
 </div>
 
