auto typed text

--- a/index.html
+++ b/index.html
@@ -24,11 +24,20 @@
         </nav>
         <div class="header_text">
             <p>SOFTWARE ENGINEER</p>
-            <h1> Hi, I'm Oros <span>Cosmin</span> Cristian</h1>
+            <h1> Hi, <span class="auto-input"></span></h1>
         </div>
     </div>
 </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+        var typed = new Typed(".auto-input", {
+            strings: ["I'm Oros Cosmin Cristian", "I'm currently studying at UPT"],
+            typeSpeed: 100,
+            backSpeed: 50,
+            loop: true
+        })
+    </script>
 </body>
 
 </html>
