about section update

--- a/index.html
+++ b/index.html
@@ -29,6 +29,28 @@
     </div>
 </div>
 
+<div id="about">
+    <div class="container">
+        <div class="row">
+            <div class="about-col-1">
+                <img src="Res/portrait.jpg">
+            </div>
+            <div class="about-col-2">
+                <h1 class="sub-title">About Me</h1> 
+                <br><br>
+                <p class="description">Software engineer | Student at Politehnica University of Timisoara
+                    <br><br>
+                    Experienced in C/C++ and Android Development(Kotlin).
+                    <br>
+                    I’m also familiar with a variety of programming languages, including Python, C#, Java, Dart.
+                    <br><br>
+                    I consider myself proactive, a hard and smart worker, always willing to learn new things and challenge myself to become better every day.
+                    </p>
+            </div>
+        </div>
+    </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typed = new Typed(".auto-input", {
