about section update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
                     I’m also familiar with a variety of programming languages, including Python, C#, Java, Dart.
                     <br><br>
                     I consider myself proactive, a hard and smart worker, always willing to learn new things and challenge myself to become better every day.
-                    </p>
+                </p>
+                
+                <div class="tab-titles">
+                    <p class="tab-links active-link">Skills</p>
+                    <p class="tab-links">Education</p>
+                    <p class="tab-links">Experience</p>
+                </div>
             </div>
         </div>
     </div>
