--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
                     <p class="tab-links">Education</p>
                     <p class="tab-links">Experience</p>
                 </div>
+
+                <div class="tab-contents">
+                    <ul>
+                        <li><span>Kotlin</span><br> Android Development, OOP</li>
+                        <li><span>C/C++</span><br> Data Structures and Algorithms</li>
+                        <li><span>Java</span><br> OOP, GUI, Games</li>
+                        <li><span>Python</span><br> ComputerVision (AI), Graphics, Games, OOP</li>
+                        <li><span>C#</span><br> Desktop Apps, OOP</li>
+                        <li><span>Matlab</span><br> Matrix manipulations, plotting of functions and data</li>
+                        <li><span>Bash</span><br> Command line work, security scripts</li>
+                        <li><span>Databases</span><br> MySQL, SQLite, MongoDB, Firebase</li>
+                        <li><span>Git</span><br> Version Control</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
