my project section update

--- a/index.html
+++ b/index.html
@@ -89,8 +89,20 @@
     <div class="container">
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
-            <div class="work">
-                
+            <div class="work1">
+                <img src="Res/project1.png">
+                <div class="layer">
+                    
+                </div>
+            </div>
+            <div class="work2">
+                <img src="Res/project2.jpg">
+            </div>
+            <div class="work3">
+                <img src="Res/project3.png">
+            </div>
+            <div class="work4">
+                <img src="Res/project4.png">
             </div>
         </div>
     </div>
