projects section update

--- a/index.html
+++ b/index.html
@@ -92,17 +92,30 @@
             <div class="work1">
                 <img src="Res/project1.png">
                 <div class="layer">
-                    
+                    <h3>Fitness App</h3>
+                    <a href="https://github.com/cosmin-oros/ProShaped-app">-</a>
                 </div>
             </div>
             <div class="work2">
                 <img src="Res/project2.jpg">
+                <div class="layer">
+                    <h3>ComputerVision Projects</h3>
+                    <a href="https://github.com/cosmin-oros/ComputerVision-Projects">-</a>
+                </div>
             </div>
             <div class="work3">
                 <img src="Res/project3.png">
+                <div class="layer">
+                    <h3>Quiz App</h3>
+                    <a href="https://github.com/cosmin-oros/World-Capitals-Quiz-App">-</a>
+                </div>
             </div>
             <div class="work4">
                 <img src="Res/project4.png">
+                <div class="layer">
+                    <h3>Travel App</h3>
+                    <a href="https://github.com/cosmin-oros/Travel-App">-</a>
+                </div>
             </div>
         </div>
     </div>
