projects section final

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
                 </div>
             </div>
         </div>
+
+        <a href="https://github.com/cosmin-oros" class="button">See More</a>
     </div>
 </div>
 
