--- a/index.html
+++ b/index.html
@@ -123,6 +123,30 @@
     </div>
 </div>
 
+<div class="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p>oroscosmin09@gmail.com</p>
+                <p>cosmin.oros@student.upt.ro</p>
+                <div class="social-icons">
+                    <a href="#"><img src="Res/instagram.png"></a>
+                    <a href="#"><img src="Res/linkedin.png"></a>
+                </div>
+            </div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="Email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typed = new Typed(".auto-input", {
