--- a/index.html
+++ b/index.html
@@ -93,33 +93,33 @@
                 <img src="Res/project1.png">
                 <div class="layer">
                     <h3>Fitness App</h3>
-                    <a href="https://github.com/cosmin-oros/ProShaped-app">-</a>
+                    <a href="https://github.com/cosmin-oros/ProShaped-app" target="_blank">-</a>
                 </div>
             </div>
             <div class="work2">
                 <img src="Res/project2.jpg">
                 <div class="layer">
                     <h3>ComputerVision Projects</h3>
-                    <a href="https://github.com/cosmin-oros/ComputerVision-Projects">-</a>
+                    <a href="https://github.com/cosmin-oros/ComputerVision-Projects" target="_blank">-</a>
                 </div>
             </div>
             <div class="work3">
                 <img src="Res/project3.png">
                 <div class="layer">
                     <h3>Quiz App</h3>
-                    <a href="https://github.com/cosmin-oros/World-Capitals-Quiz-App">-</a>
+                    <a href="https://github.com/cosmin-oros/World-Capitals-Quiz-App" target="_blank">-</a>
                 </div>
             </div>
             <div class="work4">
                 <img src="Res/project4.png">
                 <div class="layer">
                     <h3>Travel App</h3>
-                    <a href="https://github.com/cosmin-oros/Travel-App">-</a>
+                    <a href="https://github.com/cosmin-oros/Travel-App" target="_blank">-</a>
                 </div>
             </div>
         </div>
 
-        <a href="https://github.com/cosmin-oros" class="button">See More</a>
+        <a href="https://github.com/cosmin-oros" target="_blank" class="button">See More</a>
     </div>
 </div>
 
@@ -131,9 +131,11 @@
                 <p>oroscosmin09@gmail.com</p>
                 <p>cosmin.oros@student.upt.ro</p>
                 <div class="social-icons">
-                    <a href="#"><img src="Res/instagram.png"></a>
-                    <a href="#"><img src="Res/linkedin.png"></a>
+                    <a href="https://www.instagram.com/cosmin.oros/" target="_blank"><img src="Res/instagram.png"></a>
+                    <a href="https://www.linkedin.com/in/oros-cosmin/" target="_blank"><img src="Res/linkedin.png"></a>
                 </div>
+
+                <a href="Res/Oros Cosmin-Cristian - Resume.pdf" download class="button button2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form>
