--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p>oroscosmin09@gmail.com</p>
-                <p>cosmin.oros@student.upt.ro</p>
+                <p> <span>-</span> oroscosmin09@gmail.com</p>
+                <p> <span>-</span> cosmin.oros@student.upt.ro</p>
                 <div class="social-icons">
                     <a href="https://www.instagram.com/cosmin.oros/" target="_blank"><img src="Res/instagram.png"></a>
                     <a href="https://www.linkedin.com/in/oros-cosmin/" target="_blank"><img src="Res/linkedin.png"></a>
@@ -142,7 +142,7 @@
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="email" name="Email" placeholder="Your Email" required>
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                    <button type="submit">Submit</button>
+                    <button type="submit" class="button button2">Submit</button>
                 </form>
             </div>
         </div>
