--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
             </div>
         </div>
     </div>
+
+    <div class="copyright">
+        <p>Copyright © Oros Cosmin-Cristian</p>
+    </div>
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
