--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
 <div id="header">
-    <div class="container">
+    <div id="home" class="container">
         <nav>
             <img src="Res/name_logo.png" class="nameLogo">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">CV</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Projects</a></li>
+                <li><a href="#cv">CV</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="header_text">
@@ -123,7 +123,7 @@
     </div>
 </div>
 
-<div class="contact">
+<div id="contact" class="contact">
     <div class="container">
         <div class="row">
             <div class="contact-left">
@@ -135,7 +135,7 @@
                     <a href="https://www.linkedin.com/in/oros-cosmin/" target="_blank"><img src="Res/linkedin.png"></a>
                 </div>
 
-                <a href="Res/Oros Cosmin-Cristian - Resume.pdf" download class="button button2">Download CV</a>
+                <a id="cv" href="Res/Oros Cosmin-Cristian - Resume.pdf" download class="button button2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form>
