--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                     I'm from Ineu, Romania and currently living in Timisoara, Romania.
                     <br><br>
                     I consider myself proactive, a hard and smart worker, always willing to learn new things and challenge myself to become better every day.
+                    <br>
+                    Over the years I've developed a growth mindset that will definitely help me reach my goals in my professional and personal life.
                 </p>
                 
                 <div class="tab-titles">
