update skills and experience

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>Kotlin</span><br> Android Development, OOP</li>
+                        <li><span>Kotlin</span><br> Android Development</li>
+                        <li><span>Flutter (Dart)</span><br> Mobile Development</li>
                         <li><span>C/C++</span><br> Data Structures and Algorithms</li>
                         <li><span>Java</span><br> OOP, GUI, Games</li>
                         <li><span>Python</span><br> ComputerVision (AI), Graphics, Games, OOP</li>
@@ -77,7 +78,7 @@
 
                 <div class="tab-contents" id="experience">
                     <ul>
-                        
+                        <li><span>Continental (Timisoara, Romania)</span><br> Software Development Intern<br> 10/2022 - Present</li>
                     </ul>
                 </div>
             </div>
