--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
                 <div class="tab-contents" id="experience">
                     <ul>
+                        <li><span>GDSC UPT (Timisoara, Romania)</span><br> Mobile Developer<br> 11/2022 - Present</li>
                         <li><span>Continental (Timisoara, Romania)</span><br> Software Development Intern<br> 10/2022 - Present</li>
                     </ul>
                 </div>
