--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
                     <p class="tab-links" onclick="openTab('education')">Education</p>
                     <p class="tab-links" onclick="openTab('experience')">Experience</p>
+                    <p class="tab-links" onclick="openTab('volunteering')">Volunteering</p>
                 </div>
 
                 <div class="tab-contents active-tab" id="skills">
@@ -80,6 +81,13 @@
                     <ul>
                         <li><span>GDSC UPT (Timisoara, Romania)</span><br> Mobile Developer<br> 11/2022 - Present</li>
                         <li><span>Continental (Timisoara, Romania)</span><br> Software Development Intern<br> 10/2022 - Present</li>
+                    </ul>
+                </div>
+
+                <div class="tab-contents" id="volunteering">
+                    <ul>
+                        <li><span>MigraCode Barcelona</span><br> Technical Project Assistant<br> 01/2023 - Present</li>
+                        
                     </ul>
                 </div>
             </div>
