--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
                     <ul>
                         <li><span>Kotlin</span><br> Android Development</li>
                         <li><span>Flutter (Dart)</span><br> Mobile Development</li>
+                        <li><span>React Native (Flutter)</span><br> Mobile Development</li>
+                        <li><span>Python</span><br> RESTful APIs(Flask), ComputerVision (AI), Graphics, Games</li>
+                        <li><span>Java</span><br> Spring Boot, OOP</li>
                         <li><span>C/C++</span><br> Data Structures and Algorithms</li>
-                        <li><span>Java</span><br> OOP, GUI, Games</li>
-                        <li><span>Python</span><br> ComputerVision (AI), Graphics, Games, OOP</li>
-                        <li><span>C#</span><br> Desktop Apps, OOP</li>
                         <li><span>Matlab</span><br> Matrix manipulations, plotting of functions and data</li>
                         <li><span>Bash</span><br> Command line work, security scripts</li>
-                        <li><span>Databases</span><br> MySQL, SQLite, MongoDB, Firebase</li>
+                        <li><span>Databases</span><br> MySQL, SQLite, PostgreSQL, Firebase</li>
                         <li><span>Git</span><br> Version Control</li>
+                        <li><span>Postman</span><br> Testing APIs</li>
                     </ul>
                 </div>
 
