update skills and volunteering

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                     <ul>
                         <li><span>Kotlin</span><br> Android Development</li>
                         <li><span>Flutter (Dart)</span><br> Mobile Development</li>
-                        <li><span>React Native (Flutter)</span><br> Mobile Development</li>
+                        <li><span>React Native (Typescript)</span><br> Mobile Development</li>
                         <li><span>Python</span><br> RESTful APIs(Flask), ComputerVision (AI), Graphics, Games</li>
                         <li><span>Java</span><br> Spring Boot, OOP</li>
+                        <li><span>C#</span><br> .NET, Tool Development</li>
                         <li><span>C/C++</span><br> Data Structures and Algorithms</li>
                         <li><span>Matlab</span><br> Matrix manipulations, plotting of functions and data</li>
                         <li><span>Bash</span><br> Command line work, security scripts</li>
@@ -87,7 +88,7 @@
 
                 <div class="tab-contents" id="volunteering">
                     <ul>
-                        <li><span>MigraCode Barcelona</span><br> Technical Project Assistant<br> 01/2023 - Present</li>
+                        <li><span>MigraCode Barcelona</span><br> Technical Project Assistant<br> 01/2023 - 02/2023</li>
                         
                     </ul>
                 </div>
