--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
 
                 <div class="tab-contents" id="experience">
                     <ul>
+                        <li><span>Nokia (Timisoara, Romania)</span><br> Summer Practice - 5G Mobile App<br> 06/2023 - Present</li>
                         <li><span>[e-spres-oh] (Timisoara, Romania)</span><br> Liga AC LABS React Native<br> 04/2023 - 06/2023</li>
-                        <li><span>GDSC UPT (Timisoara, Romania)</span><br> Mobile Developer<br> 11/2022 - Present</li>
-                        <li><span>Continental (Timisoara, Romania)</span><br> Software Development Intern<br> 10/2022 - Present</li>
+                        <li><span>GDSC UPT (Timisoara, Romania)</span><br> Mobile Developer<br> 11/2022 - 06/2023</li>
+                        <li><span>Continental (Timisoara, Romania)</span><br> Software Development Intern<br> 10/2022 - 05/2023</li>
                     </ul>
                 </div>
 
